--- a/service.html
+++ b/service.html
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/new.jpg" alt="">
+                    <img class="img-fluid" src="img/9.jpg" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <!-- <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6> -->
@@ -143,7 +143,7 @@
                           Your floor will look new and brighter accompanied by the warm smell of fragrance. We offer these services either periodically or one time.</p>
                 </div>
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/deep cleaning.jpg" alt="">
+                    <img class="img-fluid" src="img/11.JPG" alt="">
                 </div>
             </div>
         </div>
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/image_6483441.JPG" alt="">
+                    <img class="img-fluid" src="img/12.JPG" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5"> 
                     <h1 class="mb-4" id="Cleaning-Materials-Production-&-Supply">Cleaning Materials Production & Supply</h1> 
@@ -182,7 +182,7 @@
                             </p>
                         </div>
                         <div class="col-lg-5">
-                            <img class="img-fluid" src="img/securityfinal.jpg" alt="">
+                            <img class="img-fluid" src="img/7.JPG" alt="">
                         </div>
                     </div>
                 </div>
